--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,4 +10,5 @@ anyhow = "1.0.68"
 futures = "0.3.25"
 rand = "0.8.5"
 serde_json = "1.0.93"
-tokio = { version = "1.24.2", features = ["full"] }
+#tokio = { path = "../tokio/tokio", features = ["full"] }
+tokio = { version="1", features = ["full"] }
